--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,19 @@
     <meta name="description" content="List of all animes on Onlyweebs.fr">
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-          integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link
+        rel="icon"
+        type="image/x-icon"
+        href="favicon.ico"
+        media="print"
+        onload="this.media='all'; this.onload = null">
+    <link
+        rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+        integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+        crossorigin="anonymous"
+        media="print"
+        onload="this.media='all'; this.onload = null">
 </head>
 <body>
 <app-root></app-root>
